# SLProject

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Launch Screen.storyboard  SLProject.pro  SLProject.sln  SLProjectCommon.pro  SLProjectCommonLibraries.pro  SLProjectDemoOnly.pro  SLProjectDeploy.pro  SLProject_exercises.pro  SLProject_no_Qt.sln  app-ARDemo.files  app-ARDemo.includes  appveyor.yml  christoffel.md  clang-format-all  datacam_calibration_main.xml  deactivated.travis.yml  generate-project.sh  generate_xcode_project_ios.sh  generate_xcode_project_ios_ghm1.sh  generate_xcode_project_ios_hsm4.sh  generate_xcode_project_ios_personal.sh  handling_submodules.md  index.html  ios.cmake  readme.md
app-Demo-Android/app/: CMakeLists.txt  build.gradle
app-Demo-Android_AS/app/: CMakeLists.txt  build.gradle
app-Demo-GLFW/: AppDemoGui.cpp  AppDemoLoad.cpp  AppDemoMainGLFW.cpp  CMakeLists.txt  app-Demo-GLFW-OPENCV.pro  app-Demo-GLFW-OPENCV.vcxproj  app-Demo-GLFW.pro  app-Demo-GLFW.vcxproj  imgui.ini
app-Demo-GLFW/app-Demo-GLFW.xcodeproj/: project.pbxproj
app-Demo-GLFW/app-Demo-iOS/: AppDelegate.h  SceneLib-Info.plist  ViewController.mm  comgr-Prefix.pch
app-Demo-GLFW/source/: AppDemoGui.cpp  AppDemoGui.h  AppDemoLoad.cpp  AppDemoMainGLFW.cpp  glfwMain.cpp
app-Node-GLFW/: CMakeLists.txt
apps/: CMakeLists.txt
apps/app-CameraCalibration/: CMakeLists.txt  CamCalibration.cpp  CamCalibration.h  CamCalibrationManager.cpp  CamCalibrationManager.h  main.cpp
apps/app-Demo-GLFW/: AppDemoGui.cpp  CMakeLists.txt
apps/app-Demo-Imgui/: CMakeLists.txt
apps/app-Demo-SLProject/: Benchmarks.ods  CMakeLists.txt
apps/app-Demo-WAI/: CMakeLists.txt
apps/app-MapCreator/: CMakeLists.txt  main.cpp
apps/app-MapCreator-WAI/: CMakeLists.txt  MapCreator.cpp  MapCreator.h  MapCreatorConfig.json  WAIMapSlam.cpp  WAIMapSlam.h  main.cpp
apps/app-NativeActivity/: settings.gradle
apps/app-Node-GLFW/: CMakeLists.txt
apps/app-RelocDebug-WAI/: CMakeLists.txt  main.cpp
apps/app-Test-WAI/: CMakeLists.txt  TesterConfig.json  WAITester.cpp  WAITester.h
apps/app-VocGenerator/: CMakeLists.txt  VocGenerator.cpp
apps/app_aruco_pen/: CMakeLists.txt
apps/app_camera_calibration/: CMakeLists.txt  CamCalibration.cpp  CamCalibrationManager.cpp  CamCalibrationManager.h  main.cpp
apps/app_demo_imgui/: CMakeLists.txt
apps/app_demo_slproject/: Benchmarks.ods  CMakeLists.txt
apps/app_demo_wai/: CMakeLists.txt
apps/app_mapcreator_wai/: CMakeLists.txt  MapCreator.cpp  MapCreator.h  WAIMapSlam.cpp  WAIMapSlam.h
apps/app_pen_tracking/: CMakeLists.txt
apps/exercices/: CMakeLists.txt  glUtils.h
apps/exercises/: CMakeLists.txt  glUtils.cpp
apps/source/: AppDemo.cpp  AppDemo.h  AsyncWorker.cpp  AsyncWorker.h  CVCapture.cpp  CVCapture.h  HttpDownloader.h  LogWindow.cpp  LogWindow.h  SLApplication.cpp  SLApplication.h  SLArucoPen.cpp  SLArucoPen.h  SLGLFWInterface.cpp  SLGLFWInterface.h  SLInterface.cpp  SLInterface.h  SLProjectScene.cpp  SLProjectScene.h  WebCamera.cpp  WebCamera.h
exercises/: CMakeLists.txt
exercises/ch04_HelloCube-Qt/: ch04_HelloCube-Qt.pro  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
exercises/ch04_HelloCube_Java/: SLVec3f.java
exercises/ch04_HelloCube_Net/: SLMat3f.cs  ch04_HelloCube_Net.csproj
exercises/ch04_HelloCube_Qt/: HelloCube_Qt.cpp  HelloCube_Qt.h  ch04_HelloCube_Qt.pro  ch04_HelloCube_Qt.vcxproj  ui_HelloCube_Qt.h
exercises/ch06_ColorCube/: CMakeLists.txt  ColorCube.cpp  ch06_ColorCube.pro  ch06_ColorCube.vcxproj  ch06_ColorCube.vcxproj.filters
exercises/ch07_DiffuseCube/: CMakeLists.txt  DiffuseCube.cpp  ch07_DiffuseCube.pro  ch07_DiffuseCube.vcxproj  ch07_DiffuseCube.vcxproj.filters
exercises/ch09_TextureMapping/: CMakeLists.txt  TextureMapping.cpp  ch09_TextureMapping.pro  ch09_TextureMapping.vcxproj  ch09_TextureMapping.vcxproj.filters
exercises/ch09_TextureMapping_Net/: TextureMapping_Net.cs  glUtils.cs
exercises/cv01_ChangeBrightnessAndContrast/: CMakeLists.txt  cv01_ChangeBrightnessAndContrast.cpp  cv01_ChangeBrightnessAndContrast.pro  cv01_ChangeBrightnessAndContrast.vcxproj
exercises/cv02_CalderonFilter/: CMakeLists.txt  cv02_CalderonFilter.cpp  cv02_CalderonFilter.pro  cv02_CalderonFilter.vcxproj
exercises/cv06_WarpTriangle/: CMakeLists.txt  cv06_WarpTriangle.cpp  cv06_WarpTriangle.pro  cv06_WarpTriangle.vcxproj
exercises/cv07_MeshWarping/: CMakeLists.txt  cv07_MeshWarping.cpp  cv07_MeshWarping.pro  cv07_MeshWarping.vcxproj
exercises/cv08_MeshMorphing/: CMakeLists.txt  cv08_MeshMorphing.cpp  cv08_MeshMorphing.pro  cv08_MeshMorphing.vcxproj
exercises/cv13_FaceTracking/: CMakeLists.txt  cv13_FaceTracking.cpp  cv13_FaceTracking.pro  cv13_FaceTracking.vcxproj
exercises/cv13_FacialLandmarkDetection/: CMakeLists.txt  cv13_FacialLandmarkDetection.cpp  cv13_FacialLandmarkDetection.pro  cv13_FacialLandmarkDetection.vcxproj
exercises/cv13_HeadPoseEstimation/: CMakeLists.txt  cv13_HeadPoseEstimation.cpp  cv13_HeadPoseEstimation.pro  cv13_HeadPoseEstimation.vcxproj
exercises/cv13_Snapchat2D/: CMakeLists.txt  cv13_Snapchat2D.cpp  cv13_Snapchat2D.pro  cv13_Snapchat2D.sln  cv13_Snapchat2D.vcxproj
experimental/FeatureMatching/: CMakeLists.txt  ExtractKeypoints.cpp  ExtractKeypoints.h  FeatureMatching.cpp  app.cpp  app.h  bit_pattern.h  brief_descriptor.cpp  brief_descriptor.h  convert.cpp  convert.h  gui.cpp  gui.h  gui_tools.cpp  gui_tools.h  matching.cpp  matching.h  orb_descriptor.cpp  orb_descriptor.h  tools.cpp  tools.h
experimental/Initialization/: CMakeLists.txt  sl_initializationTest.cpp
lib-SLProject/: CMakeLists.txt  ClassDiagram.cd  Introduction.html  One_Frame.md  Readme.html  ToDo.txt  lib-SLProject.pro  lib-SLProject.vcxproj  lib-SLProject.vcxproj.filters  log.txt  test.bat  test.cpp  tests.bat
lib-SLProject/EasingCurves/: EasingCurves_Net.csproj  Form1.Designer.cs  Form1.cs
lib-SLProject/_old/: SLButton.cpp  SLImGuiInfosCameraMovement.cpp  SLImGuiInfosCameraMovement.h  SLImGuiInfosDialog.h  (+17 more)
lib-WAI/: CMakeLists.txt
(+3432 files in other folders)
