if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
    if("${SL_APP}" MATCHES "SL_APP_WAI")
        add_subdirectory(app-Demo-WAI)
    elseif("${SL_APP}" MATCHES "SL_APP_NATIVEWAI")
        add_subdirectory(app-NativeActivity/app)
    else()
        add_subdirectory(app-Demo-SLProject)
    endif()
	
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	add_subdirectory(app-Demo-SLProject)
	add_subdirectory(app-Demo-WAI)
	
else()
    #add_subdirectory(exercices)
    #add_subdirectory(app-Demo-Imgui)
    #add_subdirectory(app-Demo-Node)
    #add_subdirectory(app-Demo-SLProject)
	
    if (SL_BUILD_WAI)
        add_subdirectory(app-Demo-WAI)
        add_subdirectory(app-CameraCalibration)
        #add_subdirectory(app-Test-WAI)
        add_subdirectory(app-MapCreator-WAI)
    endif()
endif()
