if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
    if("${SL_APP}" MATCHES "SL_APP_WAI")
        add_subdirectory(app_demo_wai)
    elseif("${SL_APP}" MATCHES "SL_APP_NATIVEWAI")
        add_subdirectory(app-NativeActivity/app)
    else()
        add_subdirectory(app_demo_slproject)
    endif()
	
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	add_subdirectory(app_demo_slproject)
	add_subdirectory(app_demo_wai)
	
else()
    if (SL_BUILD_EXERCISES)
        add_subdirectory(exercices)
    endif()
    add_subdirectory(app_demo_imgui)
    add_subdirectory(app_demo_node)
    add_subdirectory(app_demo_slproject)
	
    if (SL_BUILD_WAI)
        add_subdirectory(app_demo_wai)
        #add_subdirectory(app_camera_calibration)
        #add_subdirectory(app-Test-WAI)
        add_subdirectory(app_mapcreator_wai)
        #add_subdirectory(app-RelocDebug-WAI)
        add_subdirectory(app-VocGenerator)
    endif()
endif()
