if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
    add_subdirectory(app_demo_slproject)
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	add_subdirectory(app_demo_slproject)
else()
    if (SL_BUILD_EXERCISES)
        add_subdirectory(exercises)
    endif()
        add_subdirectory(app_demo_imgui)
        add_subdirectory(app_demo_node)
        add_subdirectory(app_demo_slproject)
endif()
