add_subdirectory(ch06_ColorCube)
add_subdirectory(ch07_DiffuseCube)
add_subdirectory(ch09_TextureMapping)
add_subdirectory(cv01_ChangeBrightnessAndContrast)
add_subdirectory(cv02_CalderonFilter)
add_subdirectory(cv06_WarpTriangle)
add_subdirectory(cv07_MeshWarping)
add_subdirectory(cv08_MeshMorphing)
add_subdirectory(cv13_FaceTracking)
add_subdirectory(cv13_FacialLandmarkDetection)
add_subdirectory(cv13_HeadPoseEstimation)
add_subdirectory(cv13_Snapchat2D)
